# multi_threading

./: CMakeLists.txt  README.md
include/: Communicator.h
src/: Communicator.cpp  main.cpp
